src/objects/bizible__Bizible_ABTest__c.object
<CustomObject>
    <fields>
        <fullName>bizible__BizibleId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>BizibleId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>bizible__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Bizible ABTests</relationshipLabel>
        <relationshipName>Bizible_ABTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bizible ABTests</relationshipLabel>
        <relationshipName>Bizible_ABTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__DateReported__c</fullName>
        <label>DateReported</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bizible__Experiment__c</fullName>
        <label>Experiment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Bizible ABTests</relationshipLabel>
        <relationshipName>Bizible_ABTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Bizible ABTests</relationshipLabel>
        <relationshipName>Bizible_ABTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__Variation__c</fullName>
        <label>Variation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bizible ABTest</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bizible ABTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>